# direct-supply-meal

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: hooks.json
.claude/hooks/: tdd_enforcer.py  wiki_session_inject.py
agents/: depth_scorer.py  llm_client.py  observability.py  tools.py  tools_sdk.py
agents/drivers/: dispatch.py  menu_planner.py  nl_ordering.py
agents/prompts/: menu_planner.md  nl_ordering.md
app/: config.py  main.py
app/auth/: app_session.py  clerk_middleware.py  dependencies.py  provisioning.py
app/db/: database.py  init_schema.py
app/models/: facility.py  meal_plan.py  order.py  recipe.py  resident.py  usda_food.py  user.py
app/routes/: agents.py  calendar.py  facility.py  meal_plans.py  orders.py  public.py  recipes.py
app/services/: calendar_view.py  compliance.py  menu_fallback.py  orders.py  pricing.py  scaling.py
app/static/css/: main.css
app/templates/: base.html  landing.html
app/templates/_partials/: progress_bar.html  status_badge.html  timeline.html
app/templates/auth/: callback.html  sign_in.html
app/templates/calendar/: month.html
app/templates/facility/: dashboard.html
app/templates/meal_plans/: list.html  new.html
app/templates/orders/: detail.html  list.html  new.html
app/templates/recipes/: detail.html  ingredients.html  list.html
docs/: CATALOG.md  CURRENT-STATE.md  DEMO-SCRIPT.md  DR_MEAL_ARCHITECTURE_BREAKDOWN.md  HANDOVER-2026-04-22.md  INDEX.md  PHASE-2-ROADMAP.md  PHASE-4-EXECUTION-PLAN.md  PRP-USDA-MACROS-001-PHASE-D-DIFFS.md  PRP-USDA-MACROS-001-RECIPE-VERIFICATION.md  PRP-USDA-MACROS-001-T007-SPEC.md  PRP-USDA-MACROS-001-VEGGIE-OMELETTE-HANDCALC.md  PRP-USDA-MACROS-001.md
docs/business/: BUSINESS-PLAN-ARCHITECTURE.md
docs/workflows/: AGENT-WORKFLOW.md  DOMAIN-WORKFLOW.md  KARPATHY-AUTO-RESEARCH-WORKFLOW.md  PROTOCOL-APPLICATION-MATRIX.md
fixtures/: demo_orders.json  facilities.json  ingredient_fdc_mapping.json  ingredient_fdc_mapping_candidates.json  macro.csv  recipes.json  residents.json
memory/: MEMORY.md  feedback_dietary_rules.md  project_facility_census.md  reference_ingredient_aliases.md  reference_texture_levels.md  user_admin_preferences.md
scripts/: draft_usda_mapping.py  seed_db.py  seed_traces.py  seed_usda.py
tests/: conftest.py
tests/agent/: test_depth_scorer.py  test_nl_ordering_driver.py  test_observability.py  test_tools_sdk.py
tests/e2e/: test_dashboard_flow.py  test_recipes_e2e.py  test_usda_macros_e2e.py
tests/fixtures/: claude_responses.json  clerk_jwt_helpers.py  transcript_helpers.py
tests/integration/: test_auth.py  test_calendar_api.py  test_clerk_email_fallback.py  test_dashboard_data.py  test_orders_api.py  test_orders_new_api.py  test_recipes_api.py
tests/unit/: test_app_session.py  test_calendar_view.py  test_orders_service.py  test_orders_state_machine.py  test_scaling.py
wiki/: TOPICS-INDEX.md  compiler.py  index_generator.py  schema.yaml
